--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,7 +1,22 @@
-PORT=5000
-NODE_ENV=development
-MONGODB_URI=mongodb+srv://teamwandercall:Anmol@csxt3934@wandercall.axi42bi.mongodb.net/
-JWT_SECRET=anmol_jwt_secret_key_here
+# Server Configuration
+PORT=5002
+NODE_ENV=production
+
+# Database
+MONGODB_URI=your_mongodb_atlas_connection_string
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRE=30d
 
+# Email Configuration
+EMAIL_USER=your_email@gmail.com
+APP_PASS=your_app_password
 
+# Cashfree Payment Gateway
+CF_CLIENT_ID=your_cashfree_client_id
+CF_CLIENT_SECRET=your_cashfree_client_secret
+CASHFREE_MODE=sandbox
+
+# Frontend URL
+FRONTEND_URL=https://wandercall.vercel.app
