--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "WanderCall Backend API",
   "main": "src/app.js",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
+    "build": "echo 'No build step required'",
     "test": "jest"
   },
   "dependencies": {
