--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.8.7",
-    "nodemailer": "^7.0.5"
+    "nodemailer": "^7.0.5",
+    "redis": "^4.7.1"
   },
   "devDependencies": {
     "jest": "^29.7.0",
