--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-redux": "^9.2.0",
     "react-router-dom": "6.26.2",
     "set-cookie-parser": "^2.7.1",
