--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,25 +1,8 @@
-{
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ],
-  "headers": [
     {
-      "source": "/assets/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/(.*\\.(js|css|png|jpg|jpeg|svg|webp|ico|woff|woff2))",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
-    },
-    {
-      "source": "/",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
-      ]
+        "rewrites": [
+            {
+                "source": "/(.*)",
+                "destination": "/"
+            }
+        ]
     }
-  ]
-}
