--- a/client/vercel.json
+++ b/client/vercel.json
@@ -1,8 +1,15 @@
     {
-        "rewrites": [
-            {
-                "source": "/(.*)",
-                "destination": "/"
-            }
-        ]
+      "rewrites": [
+        {
+          "source": "/(.*)",
+          "destination": "/"
+        }
+      ],
+      "redirects": [
+        {
+          "source": "/",
+          "destination": "https://www.wandercall.com",
+          "permanent": true
+        }
+      ]
     }
