added direct destination to https://www.wandercall.com

--- a/client/vercel.json
+++ b/client/vercel.json
@@ -4,6 +4,12 @@
           "source": "/(.*)",
           "destination": "/"
         }
+      ],
+      "redirects": [
+        {
+          "source": "/",
+          "destination": "https://www.wandercall.com",
+          "permanent": true
+        }
       ]
-      
     }
