--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "NODE_ENV=production vite build && node build-scripts/optimize-css.js",
-    "build:analyze": "NODE_ENV=production vite build --mode analyze",
-    "build:css": "NODE_ENV=production vite build",
+    "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -32,16 +30,10 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "critical": "^7.2.1",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    "vite": "^5.0.8",
-    "vite-plugin-purgecss": "^0.2.12",
-    "@fullhuman/postcss-purgecss": "^5.0.0",
-    "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16",
-    "cssnano": "^6.0.1"
+    "vite": "^5.0.8"
   }
 }
