--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,3 @@
-VITE_API_URL=https://api.wandercall.com
-VITE_NODE_ENV=production
-NODE_ENV=production
-PROD=true
+VITE_API_URL=http://localhost:5000
+VITE_NODE_ENV=development
+NODE_ENV=development
