--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.19",
     "@mui/material": "^5.14.20",
+    "@react-pdf/renderer": "^4.3.0",
     "@reduxjs/toolkit": "^2.0.1",
     "@vitejs/plugin-react": "^5.0.2",
     "axios": "^1.11.0",
