--- a/client/.gitignore
+++ b/client/.gitignore
@@ -12,6 +12,14 @@ dist
 dist-ssr
 *.local
 
+# Ignore env files
+client/.env
+client/.env.*
+
+# Ignore environment variables
+.env
+.env.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
