.env files are deleted

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,5 +1,12 @@
 # API Configuration
-VITE_API_URL=http://localhost:5002
+VITE_API_URL=http://localhost:5000
 
-# For production deployment, update to:
-# VITE_API_URL=https://your-render-app-name.onrender.com
+# Environment
+VITE_NODE_ENV=development
+NODE_ENV=development
+
+# Google OAuth (Client ID only - never put client secret here)
+VITE_GOOGLE_CLIENT_ID=your_google_client_id_here
+
+# Production flag
+PROD=false
